<resources>
    <string name="app_name">Recipes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main_list_activity_title">Recipes</string>
    <string name="unavailable">N/A</string>
    <string name="search">Search...</string>
    <string name="new_recipe_name">New recipe</string>
    <string name="recipe_name">Recipe name</string>
    <string name="difficulty_name">Catagory</string>
    <string name="time_to_cook_name">Preparation time (mins)</string>
    <string name="recipe_cost_name">Recipe cost in TK</string>
    <string name="recipe_ingredients_description">Ingredients</string>
    <string name="recipe_preparation_description">Instructions</string>
    <string name="like">Like</string>
    <string name="favorite_name">Favorite</string>
    <string name="time_name">Time</string>
    <string name="cost_name">Cost</string>

    <string name="desc">Description</string>
    <string name="recipe_image">Image</string>
    <string name="couldnt_retrieve_image">Couldn\'t retrieve image</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="toast_filter_hint">List sorted by:</string>

    <string-array name="difficulty_array">
        <item>Choose Category</item>
        <item>BBQ  &amp; Grilling</item>
        <item>Lunch Recipes</item>
        <item>Bread Recipe</item>
        <item>Biryani</item>
        <item>Trusted Brands</item>
    </string-array>

    <string name="notification">notification</string>

    <string name="fields_mandatory_hint">All fields are mandatory</string>
    <string name="recipe_added_success">Recipe was successfully added</string>
    <string name="recipe_added_failure">Recipe was not added!</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="recipe_deleted_success">was successfully deleted</string>
    <string name="delete_recipe_confirmation">Are you sure you want to delete this recipe?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="recipe_des">Description</string>
    <string name="recipe_dir">Directions </string>
    <string name="recipe_categori">Category</string>
    <string name="recipe_elements">Ingredients</string>
    <string name="recipe_time">Cook time</string>
    <string name="recipe_pre">Preparation time</string>
</resources>
