<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.SingleRecipe">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipeImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:elevation="3dp"
                android:src="@drawable/salade_penne" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <RatingBar
                    android:id="@+id/ratingbar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:layout_centerVertical="true"
                    android:numStars="5"
                    android:rating="3"
                    android:stepSize="1.0" />

                <TextView
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/ratingbar"
                    android:text="154 reviews" />
                <ImageButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="4dp"
                    android:layout_toLeftOf="@+id/btn_shire"
                    android:background="@drawable/ic_bookmark" />

                <ImageButton
                    android:id="@+id/btn_shire"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_share" />



            </RelativeLayout>


            <View
                android:layout_width="wrap_content"
                android:layout_height="1dip"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/primary_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TitleIngredients2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/recipe_ingredients_description"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/unavailable"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dip"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/primary_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitlePreparation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/recipe_preparation_description"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textPreparation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/unavailable"
                    android:textColor="@color/black" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editRecipeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:text="@string/edit_recipe" />

                <TextView
                    android:id="@+id/deleteRecipeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:text="@string/delete_recipe" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
