<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/recipe_name"
                    android:textColor="@color/colorPrimary" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/difficultySpinner"
                    android:layout_weight="1"/>

            </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">


                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/recipe_pre"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorPrimary" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_preTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/recipe_elements"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorPrimary" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_ing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/recipe_dir"
                        android:textColor="@color/colorPrimary" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_dir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="2dp">


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="recipe_image"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone" />

                <at.markushi.ui.CircleButton
                    android:id="@+id/cb_image"
                    android:layout_width="match_parent"
                    android:layout_height="76dip"
                    android:layout_weight="1"
                    android:src="@drawable/image_iconw"
                    app:cb_color="@color/colorPrimary"
                    app:cb_pressedRingWidth="4dip" />

                <at.markushi.ui.CircleButton
                    android:id="@+id/cb_camera"
                    android:layout_width="match_parent"
                    android:layout_height="76dip"
                    android:layout_weight="1"
                    android:src="@drawable/camera_icon_w"
                    app:cb_color="@color/colorPrimary"
                    app:cb_pressedRingWidth="4dip" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/recipeImageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:background="@color/white"
                    android:elevation="3dp"
                    android:orientation="horizontal"
                    android:padding="3dp"
                    android:visibility="gone">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/img_recView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:clickable="true" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/img_cancleView"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cancel_icon" />

                </LinearLayout>


                <at.markushi.ui.CircleButton
                    android:id="@+id/cb_save"
                    android:layout_width="match_parent"
                    android:layout_height="76dip"
                    android:src="@drawable/done_icon"
                    app:cb_color="@color/colorPrimary"
                    app:cb_pressedRingWidth="8dip" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>